tests/bad-generator/logs/generation/generator.compile.err
In file included from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:1,
                 from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:1,
                 from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:1,
                 from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:1,
                 from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:1,
                 from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:1,
                 from gen.cpp:1,
                 from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:1,
                 from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    2 | #include __FILE__
      |                  ^
In file included from gen.cpp:2:
gen.cpp:1:18: error: #include nested depth 200 exceeds maximum of 200 (use -fmax-include-depth=DEPTH to increase the maximum)
    1 | #include __FILE__
      |                  ^
gen.cpp:2:18: erro